<resources>
    <string name="app_name">Dicoding</string>
    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="message_welcome_page">Tell us about your interesting and exciting experiences while studying with dicoding!</string>
    <string name="title_welcome_page">Welcome to Dicoding Story!</string>
    <string name="title_signup_page">Please complete your personal data below.</string>
    <string name="message_login_page">Please login first</string>
    <string name="title_login_page">Ready to share your story?</string>
    <string name="message_main_page">Happy Learning at Dicoding</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="image_signup">Sign UP Photo</string>
    <string name="image_login">Login Photo</string>
    <string name="signup_success_message">The account with email %1$s and name %2$s is ready. Come on, login and learn coding.</string>
    <string name="signup_title">Yeah!</string>
    <string name="continue_button">Next</string>
    <string name="login_success_title">Yeah!</string>
    <string name="login_success_message">You have successfully logged in</string>
    <string name="login_error_message">Check your email or password</string>
    <string name="password_error">Password must be 8 characters</string>
    <string name="error_name_empty">Name cannot be empty</string>
    <string name="error_invalid_email">Invalid email</string>
    <string name="error_password_length">Password must be more than 8 characters</string>
    <string name="preview_image_story">Story Photo</string>
    <string name="add_story">Add Story</string>
    <string name="detail_image">Detail Image</string>
    <string name="normal">Normal</string>
    <string name="satellite">Satellite</string>
    <string name="terrain">Terrain</string>
    <string name="hybrid">Hybrid</string>
    <string name="password_validation">Password Must Be More Than 8 Characters</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="upload_image">Story Upload Image</string>
    <string name="description">Description</string>
    <string name="description_story">Story Description</string>
    <string name="story_app">Story App</string>
    <string name="image">Image</string>
    <string name="map">Map</string>
    <string name="title_activity_maps">Maps Activity</string>
    <string name="data_not_loaded">Data Not Available</string>
    <string name="retry">Try again</string>
    <string name="add_location">Add current location</string>
    <string name="story_location">Story Location</string>
</resources>