<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constrainLayout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.main.CreateActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/create_toolbar"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:backgroundTint="@color/navy"
            android:tint="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:titleTextColor="@android:color/white">

        </androidx.appcompat.widget.Toolbar>

        <Button
            android:id="@+id/bt_camera"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/camera"
            android:backgroundTint="@color/navy"
            app:layout_constraintBottom_toTopOf="@+id/button_add"
            app:layout_constraintEnd_toStartOf="@+id/bt_gallery"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/bt_gallery"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="24dp"
            android:text="@string/gallery"
            android:backgroundTint="@color/navy"
            app:layout_constraintBottom_toBottomOf="@+id/bt_camera"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/bt_camera"
            app:layout_constraintTop_toTopOf="@+id/bt_camera"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/button_add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="32dp"
            android:text="@string/upload"
            android:backgroundTint="@color/navy"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="VisualLintButtonSize" />

        <ImageView
            android:id="@+id/iv_image_preview"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/upload_image"
            android:src="@drawable/baseline_image"
            app:layout_constraintBottom_toTopOf="@+id/cb_add_location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/backgrounds/scenic" />

        <EditText
            android:id="@+id/ed_add_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:ems="10"
            android:hint="@string/description_story"
            android:inputType="textPersonName"
            android:background="@drawable/edittext_border"
            android:padding="16dp"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/bt_camera"
            app:layout_constraintEnd_toEndOf="@+id/button_add"
            app:layout_constraintStart_toStartOf="@+id/button_add"
            tools:ignore="Autofill,VisualLintTextFieldSize" />


        <CheckBox
            android:id="@+id/cb_add_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_location"
            app:layout_constraintBottom_toTopOf="@+id/ed_add_description"
            app:layout_constraintStart_toStartOf="@+id/bt_camera" />

        <ProgressBar
            android:id="@+id/pb_create_story"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
